--- a/src/pages/StationDetails.module.css
+++ b/src/pages/StationDetails.module.css
@@ -1,25 +1,38 @@
-
 .container {
   padding: 2rem;
   font-family: 'Noto Sans', sans-serif;
-  
 }
 
 .heading {
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  text-align: center;
   color: #0f0f0f;
 }
-p{
- color: rgb(0, 0, 0);
+
+p {
+  color: rgb(0, 0, 0);
 }
+
+.checkpointBlock {
+  margin-bottom: 2.5rem;
+  border-left: 4px solid #ffbb00;
+  padding-left: 1rem;
+}
+
+.checkpointBlock h3 {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #34495e;
+  margin-bottom: 1rem;
+}
+
 .stationCard {
-  background: var(--surface);
-  background-color: lightgoldenrodyellow  ;
+  background-color: lightgoldenrodyellow;
   border-radius: 10px;
   padding: 1.5rem;
-  margin: 1rem 0;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+  margin-bottom: 1rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
   transition: transform 0.2s;
   cursor: pointer;
 }
@@ -41,13 +54,5 @@ p{
 
 .info {
   font-size: 0.95rem;
-  color: #666;
+  color: #333;
 }
-
-
-/* .stationCard:hover{
-  background-color: #0e085e;  
-  transform: scale(1.05);    
-  transition: all 0.3s ease; 
-} */
-
